--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,14 @@
 before_install: 
 - cd Server
-- pwd
 
 language: csharp
 solution: ./KomuWDrogeTemuCzasServer.sln
-
-jobs:
-  include:
-    - dotnet: 2.1.502
-      mono: none
-    - mono: latest
+mono: none
+dotnet: 3.1
 
 install:
-  - nuget restore ./KomuWDrogeTemuCzasServer.sln
-  - nuget install NUnit.Console -Version 3.11.1 -OutputDirectory testrunner
+  - dotnet restore
 
 script:
-  - msbuild /p:Configuration=Release KomuWDrogeTemuCzasServer.sln
-  - mono ./testrunner/NUnit.ConsoleRunner.3.11.1/tools/nunit3-console.exe ./KomuWDrogeTemuCzasTests/bin/Release/KomuWDrogeTemuCzasTests.dll
+  - dotnet build
+  - dotnet test KomuWDrogeTemuCzasTests/KomuWDrogeTemuCzasTests.csproj
