--- a/Server/KomuWDrogeTemuCzasServer/WebApp.csproj
+++ b/Server/KomuWDrogeTemuCzasServer/WebApp.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>WebApp</AssemblyName>
+    <RootNamespace>WebApp</RootNamespace>
   </PropertyGroup>
 
 
