--- a/Server/Infrastucture/Infrastructure.csproj
+++ b/Server/Infrastucture/Infrastructure.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>Infrastructure</RootNamespace>
+    <AssemblyName>Infrastructure</AssemblyName>
+    <StartupObject>Infrastructure.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
